src/objects/AcccApplicationLog__c.object
<CustomObject>
    <description>The application log is used to store information around the underlying code. Also, provides a way to trace and monitor applications</description>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - DateValue(CreatedDate))/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DebugLevel__c</fullName>
        <description>Error, Info, Warning, Debug</description>
        <inlineHelpText>Error, Info, Warning, Debug</inlineHelpText>
        <label>DebugLevel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Finest</fullName>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                    <default>true</default>
                    <label>Info</label>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Finer</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationPayload__c</fullName>
        <description>If log is integration related show payload</description>
        <inlineHelpText>If log is integration related show payload</inlineHelpText>
        <label>IntegrationPayload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InvocationType__c</fullName>
        <description>invoc)ation type ( batch, future, etc</description>
        <label>InvocationType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogCode__c</fullName>
        <description>Either the exception error code of custom org code for record</description>
        <inlineHelpText>Either the exception error code of custom org code for record</inlineHelpText>
        <label>LogCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message to log</description>
        <inlineHelpText>Message to log</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceId__c</fullName>
        <description>The related record id</description>
        <inlineHelpText>The related record id</inlineHelpText>
        <label>ReferenceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceInfo__c</fullName>
        <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
        <inlineHelpText>The related record info (e.g. Apex Batch Job Id, Contact etc)</inlineHelpText>
        <label>ReferenceInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceFunction__c</fullName>
        <label>SourceFunction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source (i.e. class name)</description>
        <inlineHelpText>Source (i.e. class name)</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>Raw exception stack trace for unhandled errors</description>
        <inlineHelpText>Raw exception stack trace for unhandled errors</inlineHelpText>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statistics__c</fullName>
        <label>Statistics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timer__c</fullName>
        <description>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</description>
        <inlineHelpText>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</inlineHelpText>
        <label>Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <label>UserRoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>user name</description>
        <label>Username</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profileId__c</fullName>
        <description>profile id</description>
        <label>profileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accc Application Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Accc Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accc Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>